--- a/portifolio.html
+++ b/portifolio.html
@@ -1,26 +1,29 @@
-<html>
+html>
 <title></title>
 <head>
   <link rel="stylesheet" href="css/960_12_col.css">
     <link rel="stylesheet" href="css/reset.css">
       <link rel="stylesheet" href="css/service.css">
+      <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=open sans light"> -->
+
 </head>
 <body>
-  <header>
-  <div id="header">
+  <div class="whole container_12">
+  <header class="head container_12">
+  <div id="header" class="grid_12">
 	<h1><a href="#"><img src="image/logo.jpg" alt="Return to the homepage" /></a></h1>
-
 	<ul id="categories">
-		<li><a href="#">home</a></li>
-		<li><a href="#">needslist</a></li>
-		<li><a href="#">blog</a></li>
-		<li><a href="#">aboutus</a></li>
-		<li><a href="#">contact</a></li>
+		<li><a href="#">About us</a></li>
+		<li><a href="portifolio.html">Portfolio</a></li>
+		<li><a href="#">Contact</a></li>
+		<li><a href="service.html">home</a></li>
 	</ul>
 </div>
   </header>
 
+
   <div class="main container_12">
+      <h1 id="heading">Portfolio</h1>
      <div class="grid_4"  clearfix alpha>
        <img src="image/oldlady2.jpg">
        <h1>Elder Care Services</h1>
@@ -59,13 +62,13 @@
   </div>
   <div class="main container_12">
      <div class="grid_4"  clearfix alpha>
-       <img src="image/oldlady2.jpg">
+       <img src="image/oldage.jpeg">
        <h1>Elder Care Services</h1>
 
     </div>
 
    <div class="grid_4">
-       <img src="image/baby.jpg">
+       <img src="image/orphan.jpg">
        <h1>Adoption of Orphans</h1>
 
     </div>
@@ -77,8 +80,8 @@
    </div>
 
    <div class="grid_4" >
-        <img src="image/inmates2.jpg">
-        <h1>Stypond To Inmates</h1>
+        <img src="image/foodline.jpg">
+        <h1>voluntry services</h1>
 
    </div>
 
@@ -89,26 +92,27 @@
       </div>
 
      <div class="grid_4" omega>
-         <img src="image/classroom.jpg">
+         <img src="image/blackboard.jpg">
          <h1>Our Orphanage School</h1>
 
      </div>
   </div>
   <footer>
-    <div>
-      <form >Subscribe here for more details:<br><br>
-       E-Mail:<input type="text"class="textbox" name="E-Mail" >
-       <input type="image" class="submit" src="image/subscribe.png" alt="Submit" width="70" height="30">
-</form>
-      </form>
+    <div class=" footer container_12">
+      <div class"subscibe ">
+           <form >Subscribe here for more details:<br><br>
+                 E-Mail:<input type="text"class="textbox" name="E-Mail" >
+                        <input type="image" class="submit" src="image/subscribe.png" alt="Submit" >
+          </form>
+      </div>
 
-      <div>Follow us on:
-      <img src="image/facebook.png">
-      <img src="image/twitter.png">
-      <img src="image/google.png">
-      <img src="image/youtube.png">
-    </div>
+      <div class" img ">Follow us on:<br>
+            <img src="image/facebook.png">
+            <img src="image/twitter.png"><br>
+            <img src="image/google.png">
+            <img src="image/youtube.png">
+      </div>
   </div>
-  </footer>
+</footer>
  </body>
 </html>
