--- a/service.html
+++ b/service.html
@@ -1,26 +1,39 @@
 <html>
 <title></title>
 <head>
+  <!-- <link href='https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans' rel='stylesheet' type='text/css'> -->
+    <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=open sans light"> -->
+    <link rel="cascading stylesheet" href="css/OpenSans-Light.ttf">
   <link rel="stylesheet" href="css/960_12_col.css">
     <link rel="stylesheet" href="css/reset.css">
       <link rel="stylesheet" href="css/service.css">
+
+
 </head>
 <body>
-  <header>
-  <div id="header">
+  <div class="whole container_12">
+  <header class="head container_12">
+  <div id="header" class="grid_12">
 	<h1><a href="#"><img src="image/logo.jpg" alt="Return to the homepage" /></a></h1>
-
 	<ul id="categories">
+		<li><a href="#">About us</a></li>
+		<li><a href="portifolio.html">Portifolio</a></li>
+		<li><a href="#">Contact</a></li>
 		<li><a href="#">home</a></li>
-		<li><a href="#">needslist</a></li>
-		<li><a href="#">blog</a></li>
-		<li><a href="#">aboutus</a></li>
-		<li><a href="#">contact</a></li>
 	</ul>
 </div>
   </header>
 
+<div class="container_12">
+  <div class="hero grid_12">
+
+         <h1>"I LIKE GOING TO SCHOOL BECAUSE I WANT TO LEARN MORE TO FIND A GOOD JOB. I WANT TO BE A TEACHER."</h1>
+
+   </div>
+ </div>
+
   <div class="main container_12">
+    <h1 id="heading">Our Services</h1>
      <div class="grid_4"  clearfix alpha>
        <img src="image/oldlady2.jpg">
        <h1>Elder Care Services</h1>
@@ -63,11 +76,6 @@ The out- standing persons who getting vocational training in the vocational trai
          <p>Education is a critical foundation in every child’s life. It is certainly something that we place great value in. As a result, it has always been an ambitious dream of ours to build a comprehensive school campus for our orphanage.</p>
      </div>
   </div>
-  <div class="hero">
-
-         <h1>"I LIKE GOING TO SCHOOL BECAUSE I WANT TO LEARN MORE TO FIND A GOOD JOB. I WANT TO BE A TEACHER."</h1>
-
-   </div>
 
 
 
@@ -77,60 +85,58 @@ The out- standing persons who getting vocational training in the vocational trai
               </div>
               <div class="secondary grid_8">
 
-<h1>Our Indian Orphanage</h1>
-<p>
-The GSAM was started in 1948 in a remote jungle area of Northern India, on the border of Nepal.
-The “mission” is now surrounded by many villages and small towns. There are approximately 80 orphan children on the mission,
-ranging from newborn to young adults. Though it is partially self-supporting thanks to a 60 acre farm, the GSAM relies primarily
- on help from caring individuals to keep changing the lives of so many orphan children.</p>
-<p>
-The mission is largely run on a communal basis with many of the staff working as volunteers,
-without pay but the mission helps to meet their needs by providing food and supplies.
- There are also workers who do work for a salary, though it is very minimal. The whole “family” consists of about 180 people.
- The mission loves to have volunteer workers to help out, more information can be found on volunteering section of our site.
-</p>
-
-              </div>
-           </section>
+                        <h1>Our Indian Orphanage</h1>
+                        <p>
+                         The GSAM was started in 1948 in a remote jungle area of Northern India, on the border of Nepal.
+                           The “mission” is now surrounded by many villages and small towns. There are approximately 80 orphan children on the mission,
+                             ranging from newborn to young adults. Though it is partially self-supporting thanks to a 60 acre farm, the GSAM relies primarily
+                         on help from caring individuals to keep changing the lives of so many orphan children.</p>
+                        <p>
+                        The mission is largely run on a communal basis with many of the staff working as volunteers,
+                        without pay but the mission helps to meet their needs by providing food and supplies.
+                        There are also workers who do work for a salary, though it is very minimal. The whole “family” consists of about 180 people.
+                        The mission loves to have volunteer workers to help out, more information can be found on volunteering section of our site.
+                       </p>
+                  </div>
+          </section>
 
 
 
          <div class="part3 container_12 clearfix">
-            <div class="primary grid_4">
+            <div class="primary grid_8">
 
-               <p>
-                <h1> When you sponsor a child, you empower an entire community to lift themselves out of poverty.</h1>
 
-<h2>Sponsoring a child is a rewarding experience.</h2>
+             <p> <h2>Sponsoring a child is a rewarding experience.</h2>
 
-You have the chance to help entire communities develop the skills they need to create positive change for generations. Your monthly donations will help fund projects specific to the needs of that community, covering areas like education, food and nutrition, health, clean water, and sanitation. Your sponsored child acts as a community representative, and won't receive special treatment over other children.
+              You have the chance to help entire communities develop the skills they need to create positive change for generations. Your monthly donations will help fund projects specific to the needs of that community, covering areas like education, food and nutrition, health, clean water, and sanitation. Your sponsored child acts as a community representative, and won't receive special treatment over other children.
 
-When we develop projects, we involve community members from the start, ensuring we understand – and address – any challenges they face.
-               </p>
-             </div>
+               When we develop projects, we involve community members from the start, ensuring we understand – and address – any challenges they face. </p>
+           </div>
 
-             <div class="grid_8">
-                <img src="image/child.jpg">
-             </div>
+           <div class="grid_4">
+                <img src="image/children.jpg">
+            </div>
          </div>
 
 
 
              <footer>
-               <div>
-                 <form >Subscribe here for more details:<br><br>
-                  E-Mail:<input type="text"class="textbox" name="E-Mail" >
-                  <input type="image" class="submit" src="image/subscribe.png" alt="Submit" width="70" height="30">
-</form>
-                 </form>
+               <div class=" footer container_12">
+                 <div class"subscibe ">
+                      <form >Subscribe here for more details:<br><br>
+                            E-Mail:<input type="text"class="textbox" name="E-Mail" >
+                                   <input type="image" class="submit" src="image/subscribe.png" alt="Submit" >
+                     </form>
+                 </div>
 
-                 <div>Follow us on:
-                 <img src="image/facebook.png">
-                 <img src="image/twitter.png">
-                 <img src="image/google.png">
-                 <img src="image/youtube.png">
-               </div>
+                 <div class" img ">Follow us on:<br>
+                       <img src="image/facebook.png">
+                       <img src="image/twitter.png"><br>
+                       <img src="image/google.png">
+                       <img src="image/youtube.png">
+                 </div>
              </div>
-             </footer>
-            </body>
-         </html>
+          </footer>
+
+      </body>
+ </html>
