--- a/portifolio.html
+++ b/portifolio.html
@@ -1,6 +1,7 @@
 html>
 <title></title>
 <head>
+  <link href='https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/960_12_col.css">
     <link rel="stylesheet" href="css/reset.css">
       <link rel="stylesheet" href="css/service.css">
