--- a/service.html
+++ b/service.html
@@ -1,7 +1,7 @@
 <html>
 <title></title>
 <head>
-  <!-- <link href='https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans' rel='stylesheet' type='text/css'> -->
+  <link href='https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans' rel='stylesheet' type='text/css'>
     <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=open sans light"> -->
     <link rel="cascading stylesheet" href="css/OpenSans-Light.ttf">
   <link rel="stylesheet" href="css/960_12_col.css">
@@ -122,7 +122,7 @@ The out- standing persons who getting vocational training in the vocational trai
 
              <footer>
                <div class=" footer container_12">
-                 <div class"subscibe ">
+                 <div class="subscibe ">
                       <form >Subscribe here for more details:<br><br>
                             E-Mail:<input type="text"class="textbox" name="E-Mail" >
                                    <input type="image" class="submit" src="image/subscribe.png" alt="Submit" >
