--- a/service.html
+++ b/service.html
@@ -73,7 +73,7 @@ The out- standing persons who getting vocational training in the vocational trai
      <div class="grid_4" omega>
          <img src="image/classroom.jpg">
          <h1>Our Orphanage School</h1>
-         <p>Education is a critical foundation in every child’s life. It is certainly something that we place great value in. As a result, it has always been an ambitious dream of ours to build a comprehensive school campus for our orphanage.</p>
+         <p>Education is a critical foundation in every child's life. It is certainly something that we place great value in. As a result, it has always been an ambitious dream of ours to build a comprehensive school campus for our orphanage.</p>
      </div>
   </div>
 
@@ -88,13 +88,13 @@ The out- standing persons who getting vocational training in the vocational trai
                         <h1>Our Indian Orphanage</h1>
                         <p>
                          The GSAM was started in 1948 in a remote jungle area of Northern India, on the border of Nepal.
-                           The “mission” is now surrounded by many villages and small towns. There are approximately 80 orphan children on the mission,
+                           The mission is now surrounded by many villages and small towns. There are approximately 80 orphan children on the mission,
                              ranging from newborn to young adults. Though it is partially self-supporting thanks to a 60 acre farm, the GSAM relies primarily
                          on help from caring individuals to keep changing the lives of so many orphan children.</p>
                         <p>
                         The mission is largely run on a communal basis with many of the staff working as volunteers,
                         without pay but the mission helps to meet their needs by providing food and supplies.
-                        There are also workers who do work for a salary, though it is very minimal. The whole “family” consists of about 180 people.
+                        There are also workers who do work for a salary, though it is very minimal. The whole family consists of about 180 people.
                         The mission loves to have volunteer workers to help out, more information can be found on volunteering section of our site.
                        </p>
                   </div>
@@ -110,7 +110,7 @@ The out- standing persons who getting vocational training in the vocational trai
 
               You have the chance to help entire communities develop the skills they need to create positive change for generations. Your monthly donations will help fund projects specific to the needs of that community, covering areas like education, food and nutrition, health, clean water, and sanitation. Your sponsored child acts as a community representative, and won't receive special treatment over other children.
 
-               When we develop projects, we involve community members from the start, ensuring we understand – and address – any challenges they face. </p>
+               When we develop projects, we involve community members from the start, ensuring we understand - and address - any challenges they face. </p>
            </div>
 
            <div class="grid_4">
