--- a/portifolio.html
+++ b/portifolio.html
@@ -1,119 +1,96 @@
-html>
-<title></title>
-<head>
-  <link href='https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/960_12_col.css">
-    <link rel="stylesheet" href="css/reset.css">
+<!doctype html>
+<html>
+    <title>Portfolio Page</title>
+    <head>
+      <link href='https://fonts.googleapis.com/css?family=Noto+Sans|Open+Sans' rel='stylesheet' type='text/css'>
+      <link rel="stylesheet" href="css/reset.css">
+      <link rel="stylesheet" href="css/960_12_col.css">
       <link rel="stylesheet" href="css/service.css">
-      <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=open sans light"> -->
+    </head>
+    <body>
 
-</head>
-<body>
-  <div class="whole container_12">
-  <header class="head container_12">
-  <div id="header" class="grid_12">
-	<h1><a href="#"><img src="image/logo.jpg" alt="Return to the homepage" /></a></h1>
-	<ul id="categories">
-		<li><a href="#">About us</a></li>
-		<li><a href="portifolio.html">Portfolio</a></li>
-		<li><a href="#">Contact</a></li>
-		<li><a href="service.html">home</a></li>
-	</ul>
-</div>
-  </header>
+       <div class="whole container_12">
+         <header class="head">
+          <div id="header" class="grid_12">
+	          <a href="#"><img src="image/logo.jpg" alt="Return to the homepage" /></a>
+            <ul id="categories">
+		            <li><a href="#">About us</a></li>
+	             	<li><a href="portifolio.html">Portfolio</a></li>
+	             	<li><a href="#">Contact</a></li>
+	        	    <li><a href="service.html">home</a></li>
+          	</ul>
+           </div>
+         </header>
+         <div class="port container_12">
+                <h1 id="heading">Portfolio</h1>
+                <div class="grid_4"  clearfix alpha>
+                      <img src="image/oldlady2.jpg">
+                      <h1>Elder Care Services</h1>
+                </div>
+                <div class="grid_4">
+                      <img src="image/baby.jpg">
+                      <h1>Adoption of Orphans</h1>
+                </div>
+                <div class="grid_4" >
+                      <img src="image/widow2.jpg">
+                      <h1>Support To Widows</h1>
+                </div>
+                <div class="grid_4" >
+                      <img src="image/inmates2.jpg">
+                      <h1>Stypond To Inmates</h1>
+                </div>
+                <div class="grid_4">
+                   <img src="image/leprosy.jpg">
+                   <h1>Leprosy Mission</h1>
+                </div>
+                <div class="grid_4" omega>
+                   <img src="image/classroom.jpg">
+                   <h1>Our Orphanage School</h1>
+               </div>
+          </div>
+          <div class="main container_12">
+                <div class="grid_4"  clearfix alpha>
+                   <img src="image/oldage.jpeg">
+                   <h1>Elder Care Services</h1>
+                </div>
+                <div class="grid_4">
+                   <img src="image/orphan.jpg">
+                   <h1>Adoption of Orphans</h1>
+                </div>
+                <div class="grid_4" >
+                    <img src="image/widow2.jpg">
+                    <h1>Support To Widows</h1>
+                </div>
+                <div class="grid_4" >
+                    <img src="image/foodline.jpg">
+                    <h1>voluntry services</h1>
+                </div>
+                <div class="grid_4">
+                     <img src="image/leprosy.jpg">
+                     <h1>Leprosy Mission</h1>
+                </div>
+                <div class="grid_4" omega>
+                     <img src="image/blackboard.jpg">
+                     <h1>Our Orphanage School</h1>
+                </div>
+        </div>
 
-
-  <div class="main container_12">
-      <h1 id="heading">Portfolio</h1>
-     <div class="grid_4"  clearfix alpha>
-       <img src="image/oldlady2.jpg">
-       <h1>Elder Care Services</h1>
-
-    </div>
-
-   <div class="grid_4">
-       <img src="image/baby.jpg">
-       <h1>Adoption of Orphans</h1>
-
-    </div>
-
-   <div class="grid_4" >
-       <img src="image/widow2.jpg">
-       <h1>Support To Widows</h1>
-
-   </div>
-
-   <div class="grid_4" >
-        <img src="image/inmates2.jpg">
-        <h1>Stypond To Inmates</h1>
-
-   </div>
-
-    <div class="grid_4">
-         <img src="image/leprosy.jpg">
-         <h1>Leprosy Mission</h1>
-
-      </div>
-
-     <div class="grid_4" omega>
-         <img src="image/classroom.jpg">
-         <h1>Our Orphanage School</h1>
-
-     </div>
-  </div>
-  <div class="main container_12">
-     <div class="grid_4"  clearfix alpha>
-       <img src="image/oldage.jpeg">
-       <h1>Elder Care Services</h1>
-
-    </div>
-
-   <div class="grid_4">
-       <img src="image/orphan.jpg">
-       <h1>Adoption of Orphans</h1>
-
-    </div>
-
-   <div class="grid_4" >
-       <img src="image/widow2.jpg">
-       <h1>Support To Widows</h1>
-
-   </div>
-
-   <div class="grid_4" >
-        <img src="image/foodline.jpg">
-        <h1>voluntry services</h1>
-
-   </div>
-
-    <div class="grid_4">
-         <img src="image/leprosy.jpg">
-         <h1>Leprosy Mission</h1>
-
-      </div>
-
-     <div class="grid_4" omega>
-         <img src="image/blackboard.jpg">
-         <h1>Our Orphanage School</h1>
-
-     </div>
-  </div>
-  <footer>
-    <div class=" footer container_12">
-      <div class"subscibe ">
-           <form >Subscribe here for more details:<br><br>
-                 E-Mail:<input type="text"class="textbox" name="E-Mail" >
-                        <input type="image" class="submit" src="image/subscribe.png" alt="Submit" >
-          </form>
-      </div>
-
-      <div class" img ">Follow us on:<br>
-            <img src="image/facebook.png">
-            <img src="image/twitter.png"><br>
-            <img src="image/google.png">
-            <img src="image/youtube.png">
-      </div>
-  </div>
-</footer>
- </body>
+        <footer>
+              <div class=" footer container_12">
+                     <div class"subscibe grid_6">
+                         <form >Subscribe here for more details:<br><br>
+                             E-Mail:<input type="text"class="textbox" name="E-Mail" >
+                                    <input type="image" class="submit" src="image/subscribe.png" alt="Submit" >
+                         </form>
+                      </div>
+                      <div class" img grid_6">
+                         <h4>Follow us on:</h4><br>
+                         <img src="image/facebook.png">
+                         <img src="image/twitter.png">
+                         <img src="image/google.png">
+                         <img src="image/youtube.png">
+                     </div>
+                </div>
+         </footer>
+    </body>
 </html>
